--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: '18'
     
     - name: 安装依赖
-      run: npm ci
+      run: npm install --force
     
     - name: 构建项目
       run: npm run build
